# image-map-censor

./: CMakeLists.txt  README.md  demo.cpp
ai_model/: generate_trt.sh  init_model.sh  performance_run_gpu.sh  version.md
ai_model/demo/: demo.cpp
ai_model/include/: det_body_ssd_resnet50.hpp
ai_model/libs/linux/gpu/: .gitattributes  performance_testing_GPU
ai_model/model/: .gitattributes  config.ini  det_body_ssd_mobilenetv1_v2.0.1.trt  det_body_ssd_mobilenetv1_v2.0.1.uff
